--- a/wrappers/android/examples/capture/build.gradle
+++ b/wrappers/android/examples/capture/build.gradle
@@ -20,14 +20,17 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
     implementation project(':librealsense')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.google.mediapipe:tasks-vision:latest.release'// 1210 new added
     implementation "androidx.appcompat:appcompat:$appcompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayoutVersion"
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidextjunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoCoreVersion"
+
 }
