--- a/wrappers/android/build.gradle
+++ b/wrappers/android/build.gradle
@@ -8,8 +8,8 @@ plugins {
      * see Applying external plugins with same version to subprojects.
      */
 
-    id 'com.android.application' version '8.0.1' apply false
-    id 'com.android.library' version '8.0.1' apply false
+    id 'com.android.application' version '8.7.3' apply false
+    id 'com.android.library' version '8.7.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
 }
 
@@ -17,7 +17,8 @@ ext {
     defaultCompileSdkVersion = 33
     defaultTargetSdkVersion = 33
     //defaultMinSdkVersion = 19
-    defaultMinSdkVersion = 23
+//    defaultMinSdkVersion = 23
+    defaultMinSdkVersion = 24 // new added 1210
 
     appcompatVersion = '1.6.1'
     constraintlayoutVersion = '2.1.4'
