--- a/wrappers/android/examples/recording/src/main/AndroidManifest.xml
+++ b/wrappers/android/examples/recording/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?> <!-- 01052025-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.intel.realsense.recording">
 
+    <!-- 声明设备功能 -->
     <uses-feature android:name="android.hardware.camera" android:required="false" />
 
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <!-- 应用所需权限 -->
+    <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
@@ -14,15 +16,69 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- JobListActivity 作为应用入口 -->
         <activity
-            android:name="com.intel.realsense.recording.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:exported="true">
+            android:name="com.intel.realsense.recording.JobListActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
 
-</manifest>
+        <!-- MainActivity 作为普通的 Activity -->
+        <activity
+            android:name="com.intel.realsense.recording.MainActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="com.intel.realsense.recording.ClipListActivity" />
+
+        <!-- JobActivity 作为普通的 Activity -->
+        <activity
+            android:name="com.intel.realsense.recording.TaskListActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="com.intel.realsense.recording.JobListActivity" />
+        <!-- cliplist 作为普通的 Activity -->
+        <activity
+            android:name="com.intel.realsense.recording.ClipListActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName="com.intel.realsense.recording.TaskListActivity" />
+
+
+
+    </application>
+</manifest> <!-- 01052025-->
+
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+    <!--<manifest xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--    package="com.intel.realsense.recording">-->
+
+    <!--    <uses-feature android:name="android.hardware.camera" android:required="false" />-->
+
+    <!--    <uses-permission android:name="android.permission.CAMERA"/>-->
+    <!--    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />-->
+
+    <!--    <application-->
+    <!--        android:allowBackup="true"-->
+    <!--        android:icon="@mipmap/ic_launcher"-->
+    <!--        android:label="@string/app_name"-->
+    <!--        android:roundIcon="@mipmap/ic_launcher"-->
+    <!--        android:supportsRtl="true"-->
+    <!--        android:theme="@style/AppTheme">-->
+    <!--        <activity-->
+    <!--            android:name="com.intel.realsense.recording.MainActivity"-->
+    <!--            android:theme="@style/AppTheme.NoActionBar"-->
+    <!--            android:exported="true">-->
+    <!--            <intent-filter>-->
+    <!--                <action android:name="android.intent.action.MAIN" />-->
+    <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+    <!--            </intent-filter>-->
+    <!--        </activity>-->
+    <!--    </application>-->
+
+    <!--</manifest>-->
