--- a/wrappers/android/build.gradle
+++ b/wrappers/android/build.gradle
@@ -11,11 +11,12 @@ plugins {
     id 'com.android.application' version '8.7.3' apply false
     id 'com.android.library' version '8.7.3' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'de.undercouch.download' version '4.1.2' apply false //0122
 }
 
 ext {
-    defaultCompileSdkVersion = 33
-    defaultTargetSdkVersion = 33
+    defaultCompileSdkVersion = 35 //0122
+    defaultTargetSdkVersion = 35 // 0122
     //defaultMinSdkVersion = 19
 //    defaultMinSdkVersion = 23
     defaultMinSdkVersion = 24 // new added 1210
